@@ -34,17 +34,17 @@
 #define MALLOC_DEBUG_DISABLE
 
 #include "malloc_dbg.h"
-#include "malloc_loc.h"
 
 #include "chunk.h"
 #include "compat.h"
 #include "conf.h"
 #include "dbg_values.h"
 #include "error.h"
+#include "malloc_loc.h"
 
 #if INCLUDE_RCS_IDS
 LOCAL	char	*rcs_id =
-  "$Id: error.c,v 1.23 1993/04/19 20:14:00 gray Exp $";
+  "$Id: error.c,v 1.24 1993/04/30 20:02:32 gray Exp $";
 #endif
 
 /*
